manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - name: webhook
        image: ghcr.io/bnalalpeta/authz-webhook:latest
        ports:
        - containerPort: 9443
